Perkin-UAT/force-app/main/default/objects/Activity/fields/CaseLookup__c.field-meta.xml
<CustomField>
    <fullName>CaseLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>