Perkin-UAT/force-app/main/default/objects/Activity/fields/Cost_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Event__c</fullName>
    <label>Cost of Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>