Perkin-UAT/force-app/main/default/objects/Activity/fields/Date_Time_CASE_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_CASE_Opened__c</fullName>
    <formula>CaseLookup__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time CASE Opened</label>
    <type>DateTime</type>
</CustomField>