Perkin-UAT/force-app/main/default/objects/Activity/fields/Define_species_requirements__c.field-meta.xml
<CustomField>
    <fullName>Define_species_requirements__c</fullName>
    <description>S-692569 - created as part of this story</description>
    <label>Define species requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Rat</fullName>
            </value>
            <value>
                <fullName>Cynomolgus</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>