Perkin-UAT/force-app/main/default/objects/Activity/fields/Discovery_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Agreement__c</fullName>
    <label>Discovery Agreement Attached</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CategoryType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>