Perkin-UAT/force-app/main/default/objects/Activity/fields/DX_Collateral_Used_NTD_NIPT__c.field-meta.xml
<CustomField>
    <fullName>DX_Collateral_Used_NTD_NIPT__c</fullName>
    <description>This field is accessible by Viacord Marketing users</description>
    <label>DX Collateral Used - NTD &amp; NIPT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACMG PRACTICE GUIDELINES</fullName>
            </value>
            <value>
                <fullName>ACOG PRACTICE BULLETIN 77</fullName>
            </value>
            <value>
                <fullName>BORRELL 1ST TRIMESTER SCREENING</fullName>
            </value>
            <value>
                <fullName>BUJOLD ASPIRIN META ANALY</fullName>
            </value>
            <value>
                <fullName>CHROM ABNORMAL DETECT</fullName>
            </value>
            <value>
                <fullName>CLINIC BENEFIT 1ST TRIMESTER BIOCHEM SCN</fullName>
            </value>
            <value>
                <fullName>COPY OF NEW BLOOD CARD</fullName>
            </value>
            <value>
                <fullName>EVANS BIOCHEM SCREENING</fullName>
            </value>
            <value>
                <fullName>EVANS META-ANALYSIS</fullName>
            </value>
            <value>
                <fullName>FASTER STUDY</fullName>
            </value>
            <value>
                <fullName>FIRST AND SECOND TRIMESTER SERUM</fullName>
            </value>
            <value>
                <fullName>FIRST TRIMESTER SCREEN PATIENT BROCHURE</fullName>
            </value>
            <value>
                <fullName>1st TRIMESTER SCRN PAT BROCHURE-SPANISH</fullName>
            </value>
            <value>
                <fullName>FUTCH 2013, INITIAL CLINICAL LAB EXP</fullName>
            </value>
            <value>
                <fullName>GIGUERE PE A SYSTEMATIC REVIEW</fullName>
            </value>
            <value>
                <fullName>IRA PATIENT INSTRUCTION SHEET</fullName>
            </value>
            <value>
                <fullName>MELISSA STUDY 2012 - GREEN JOUR ARTICLE</fullName>
            </value>
            <value>
                <fullName>NIPT EVANS MONOGRAPH:</fullName>
            </value>
            <value>
                <fullName>NONINVASIVE PRENATAL TEST - CLINIC ASSES</fullName>
            </value>
            <value>
                <fullName>NT CERTIFICATION PROCESS INFO SHEET</fullName>
            </value>
            <value>
                <fullName>NT CERTIFICATION PROC WITH TRAINER INFO</fullName>
            </value>
            <value>
                <fullName>NTD - FTS - IRA INSTRUCTION SHT - SPANIS</fullName>
            </value>
            <value>
                <fullName>NTD BILLING AND INSURANCE FACTS</fullName>
            </value>
            <value>
                <fullName>NTD COMPREHENSIVE PHYSICIAN LEAVE BEHIND</fullName>
            </value>
            <value>
                <fullName>NTD PREECLAMPSIA SCREEN | T1 WHITE PAPER</fullName>
            </value>
            <value>
                <fullName>NTD REPORTS FLAGS PHYSICIAN BROCHURE</fullName>
            </value>
            <value>
                <fullName>NUCHAL TRANSLUCENCY QLTY REVIEW PROG BRO</fullName>
            </value>
            <value>
                <fullName>PE CUCKLE MONOGRAPH</fullName>
            </value>
            <value>
                <fullName>PE TECHNICAL BRIEF</fullName>
            </value>
            <value>
                <fullName>PERKINELMER BILLING INFORMATION SHEET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>