Perkin-UAT/force-app/main/default/objects/Activity/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>NT Training</fullName>
            </value>
            <value>
                <fullName>Educational Event</fullName>
            </value>
            <value>
                <fullName>In-Service</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>