Perkin-UAT/force-app/main/default/objects/Activity/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>选其他原因</label>
    <length>255</length>
    <type>Text</type>
</CustomField>