Perkin-UAT/force-app/main/default/objects/Activity/fields/Inbound_Call__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>False = Outbound Call, True = Inbound Call</description>
    <label>Inbound Call</label>
    <type>Checkbox</type>
</CustomField>