Perkin-UAT/force-app/main/default/objects/Activity/fields/MH_Action__c.field-meta.xml
<CustomField>
    <fullName>MH_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAM Integration Trigger Do not remove</description>
    <label>MH Action</label>
    <type>Checkbox</type>
</CustomField>