Perkin-UAT/force-app/main/default/objects/Activity/fields/mh_Sheet_Section__c.field-meta.xml
<CustomField>
    <fullName>mh_Sheet_Section__c</fullName>
    <description>SAM Sheet Section Information Gold Sheet and Blue Sheet Best Actions</description>
    <label>Sheet Section</label>
    <type>TextArea</type>
</CustomField>