Perkin-UAT/force-app/main/default/objects/Activity/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <label>Phone 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>