Perkin-UAT/force-app/main/default/objects/Activity/fields/SMAX_PS_Company__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Company__c</fullName>
    <description>Work Order account</description>
    <inlineHelpText>Work Order account</inlineHelpText>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>