Perkin-UAT/force-app/main/default/objects/Activity/fields/SMAX_PS_ConfirmLongJob__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_ConfirmLongJob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirm Long Job</label>
    <type>Checkbox</type>
</CustomField>