Perkin-UAT/force-app/main/default/objects/Activity/fields/SMAX_PS_Instrument__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Instrument__c</fullName>
    <description>Denotes instrument for work order</description>
    <inlineHelpText>Denotes instrument for work order</inlineHelpText>
    <label>Instrument</label>
    <length>255</length>
    <type>Text</type>
</CustomField>