Perkin-UAT/force-app/main/default/objects/Activity/fields/SMAX_PS_Is_Long_Job__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Long_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a Long Job event?</description>
    <label>Is Long Job</label>
    <type>Checkbox</type>
</CustomField>