Perkin-UAT/force-app/main/default/objects/Activity/fields/SMAX_PS_Product__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>