Perkin-UAT/force-app/main/default/objects/Activity/fields/SMAX_PS_Work_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Order_Number__c</fullName>
    <description>Denotes the event&#39;s related work order number</description>
    <inlineHelpText>Denotes the event&#39;s related work order number</inlineHelpText>
    <label>Work Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>