Perkin-UAT/force-app/main/default/objects/Activity/fields/SMAX_PS_Work_Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Order_Record_Type__c</fullName>
    <description>Denotes the work order record type</description>
    <inlineHelpText>Denotes the work order record type</inlineHelpText>
    <label>Work Order Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>