Perkin-UAT/force-app/main/default/objects/Activity/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Account__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Generated</fullName>
            </value>
            <value>
                <fullName>Marketing Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>