Perkin-UAT/force-app/main/default/objects/Activity/fields/Strategic_Priority_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Priority_EMEA__c</fullName>
    <label>Strategic Priority EMEA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Detection – Academic</fullName>
            </value>
            <value>
                <fullName>Detection – Cancer</fullName>
            </value>
            <value>
                <fullName>Detection – Inflammation</fullName>
            </value>
            <value>
                <fullName>Detection – Metabolism</fullName>
            </value>
            <value>
                <fullName>Detection – Neuroscience</fullName>
            </value>
            <value>
                <fullName>HCS – Microbe</fullName>
            </value>
            <value>
                <fullName>HCS – Immunotherapy</fullName>
            </value>
            <value>
                <fullName>HCS – Metabolic</fullName>
            </value>
            <value>
                <fullName>INV -  Optical Install Base</fullName>
            </value>
            <value>
                <fullName>INV – Soft Tissue</fullName>
            </value>
            <value>
                <fullName>Biotech- Immune Oncology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>