Perkin-UAT/force-app/main/default/objects/Activity/fields/Subject_Category__c.field-meta.xml
<CustomField>
    <fullName>Subject_Category__c</fullName>
    <label>Subject Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin &amp; General</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Grand Rounds</fullName>
            </value>
            <value>
                <fullName>Instrument Demo Request</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Please enter a subject</fullName>
            </value>
            <value>
                <fullName>Postsales</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Reagent Evaluation Request</fullName>
            </value>
            <value>
                <fullName>Run Samples</fullName>
            </value>
            <value>
                <fullName>Sales Call</fullName>
            </value>
            <value>
                <fullName>Scientific Presentation</fullName>
            </value>
            <value>
                <fullName>Send Specimen Kit</fullName>
            </value>
            <value>
                <fullName>Service Call</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Webcast</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Snack</fullName>
            </value>
            <value>
                <fullName>Local Conference or Tradeshow</fullName>
            </value>
            <value>
                <fullName>Guest Speaker Event</fullName>
            </value>
            <value>
                <fullName>Educational or Scientific Presentation</fullName>
            </value>
            <value>
                <fullName>PTO Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>