Perkin-UAT/force-app/main/default/objects/Activity/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>G_PICK_030_SubType</valueSetName>
    </valueSet>
</CustomField>