Perkin-UAT/force-app/main/default/objects/Activity/fields/Supplies_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Supplies_Delivered__c</fullName>
    <label>Supplies Delivered</label>
    <type>TextArea</type>
</CustomField>