Perkin-UAT/force-app/main/default/objects/Activity/fields/SVMX_PS_TS_Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>SVMX_PS_TS_Time_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox is used to enter non-Work Order-related time that should be tracked.  For example; Training, PTO, Admin time, etc.</inlineHelpText>
    <label>Time Entry</label>
    <type>Checkbox</type>
</CustomField>