Perkin-UAT/force-app/main/default/objects/Activity/fields/Task_Auto_Assign__c.field-meta.xml
<CustomField>
    <fullName>Task_Auto_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Auto Assign</label>
    <type>Checkbox</type>
</CustomField>