Perkin-UAT/force-app/main/default/objects/Activity/fields/Wallet_Share_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Share_Expansion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wallet Share Expansion</label>
    <type>Checkbox</type>
</CustomField>