Perkin-UAT/force-app/main/default/objects/Activity/listViews/MyActivities.listView-meta.xml
<ListView>
    <fullName>MyActivities</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.DUE_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2012 12:00 AM</value>
    </filters>
    <filters>
        <field>TASK.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Activities</label>
    <language>en_US</language>
</ListView>